# lifegence-voiceprint-api

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  audio_processor.py  embedding_extractor.py
backend/app/services/: speaker_service.py
backend/tests/: conftest.py  test_api_endpoints.py  test_audio_processor.py  test_embedding_extractor.py  test_speaker_service.py
docs/: API.md  ARCHITECTURE.md  TECHNICAL.md
scripts/: init-db.sql
